Added delete notification methods